remote push test

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
       </div>
 
  <div class="container about">
-        <h5>about me</h5>
+        <h5>about us</h5>
         <h6>let me introduce  myself</h6>
         <hr>
         <div class="row">
