--- a/client/index.html
+++ b/client/index.html
@@ -135,7 +135,7 @@
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 <script src='https://cdn.rawgit.com/Dogfalo/materialize/master/dist/js/materialize.min.js'></script>
 
-        <script src="js/index.js"></script>
+        <script src="index.js"></script>
 
 
 
